@@ -11,6 +11,7 @@ Changes in version 1.1 (TBD)
 - Added a slider control to the Time Controller.
 - Fixed bug 2116693: List view does not sort properly for all time formats.
 - Fixed bug 2836265: Time controls should wrap around their limits.
+- Fixed bug 2691499: Sky at glance crashes with empty module.
 * Binary packages for Windows, Mac OS X, Ubuntu and generic Linux.
 
 
